--- a/nomer 2/latihan2_2.html
+++ b/nomer 2/latihan2_2.html
@@ -9,6 +9,8 @@
    <p>Tampilan teks paragraf pertama.<br>
    <p>Tampilan teks paragraf kedua.<br>
    Tampilan teks setelah paragraf.
+
+   <a href="../nomer 8/latihan8_1.html 8">back to home</a>
 </body>
  
 </html>
