--- a/nomer 2/latihan2_4.html
+++ b/nomer 2/latihan2_4.html
@@ -11,6 +11,8 @@
    <h4>Ini Heading-4</h4>
    <h5 style="text-align:center">Ini Heading-5</h5>
    <h6>Ini Heading-6</h6>
+
+   <a href="../nomer 8/latihan8_1.html 8">back to home</a>
 </body>
  
 </html>
