--- a/nomer 2/latihan2_7.html
+++ b/nomer 2/latihan2_7.html
@@ -10,6 +10,8 @@
        dengan menggunakan element CENTER
  
    </center>
+
+   <a href="../nomer 8/latihan8_1.html 8">back to home</a>
  
 </body>
  
