--- a/nomer 2/latihan2_9.html
+++ b/nomer 2/latihan2_9.html
@@ -12,6 +12,8 @@
    <hr align="center" size="5" width="40%">
    <hr align="center" size="5" width="20%">
    <hr align="center" size="5" width="10%">
+
+   <a href="../nomer 8/latihan8_1.html 8">back to home</a>
 </body>
  
 </html>
