--- a/nomer 3/latihan3_1.html
+++ b/nomer 3/latihan3_1.html
@@ -15,6 +15,8 @@
        <li>Perangkat Keras Komputer</li>
        <li>Sistem Operasi</li>
    </ol>
+
+   <a href="../nomer 8/latihan8_1.html 8">back to home</a>
 </body>
  
 </html>
