--- a/nomer 5/latihan5_2.html
+++ b/nomer 5/latihan5_2.html
@@ -6,6 +6,8 @@
  
 <body>
    <img width="160" height="160" src="./gambar/image.png">
+
+   <a href="../nomer 8/latihan8_1.html 8">back to home</a>
 </body>
  
 </html>
