--- a/nomer 6/latihan6_1.html
+++ b/nomer 6/latihan6_1.html
@@ -17,6 +17,8 @@
        <li><a href="http://www.google.com" target = "_self" > visit google</a></li>
        <li><a href="http://www.google.com" target = "_top" > visit google</a></li>
    </ol>
+
+   <a href="../nomer 8/latihan8_1.html 8">back to home</a>
 </body>
  
 </html>
