--- a/nomer 7/latihan7_1.html
+++ b/nomer 7/latihan7_1.html
@@ -22,6 +22,8 @@
        <INPUT TYPE="radio" NAME="var3" VALUE="r3">21 - 25 <BR><BR>
        <INPUT TYPE="submit" NAME="var4" VALUE="Send"> <INPUT TYPE="reset" NAME="var5" VALUE="Clear">
    </FORM>
+
+   <a href="../nomer 8/latihan8_1.html 8">back to home</a>
 </body>
  
 </html>
