--- a/nomer 1/latihan1_4.html
+++ b/nomer 1/latihan1_4.html
@@ -5,7 +5,9 @@
 </head>
  
 <body text="red" bgcolor="aqua" background="background.png"> Belajar HTML tidaklah sulit
- 
+
+   <a href="../nomer 8/latihan8_1.html 8">back to home</a>
+
 </body>
  
 </html>
