--- a/nomer 2/latihan2_1.html
+++ b/nomer 2/latihan2_1.html
@@ -19,6 +19,8 @@
 <body>
    Belajar bahasa pemrograman web. Dengan materi dasar HTML. <br>
    <br>Belajar bahasa pemrograman web.<br>Dengan materi dasar HTML.
+
+   <a href="../nomer 8/latihan8_1.html 8">back to home</a>
 </body>
  
 </html>
