--- a/nomer 2/latihan2_5.html
+++ b/nomer 2/latihan2_5.html
@@ -10,6 +10,8 @@
    <i>Ini teks tercetak miring (italic)</i><br>
    <u>Ini teks tercetak garis bawah (underline)</u><br>
    <b><i> Ini teks tercetak tebal(bold)</i></b>
+
+   <a href="../nomer 8/latihan8_1.html 8">back to home</a>
 </body>
  
 </html>
