--- a/nomer 2/latihan2_6.html
+++ b/nomer 2/latihan2_6.html
@@ -11,6 +11,8 @@ apapun bentuknya tulisan ini akan ditampilkan
 pada web browser
 seperti apa adanya, alias yang ditulis
 </pre>
+
+<a href="../nomer 8/latihan8_1.html 8">back to home</a>
 </body>
  
 </html>
