--- a/nomer 2/latihan2_8.html
+++ b/nomer 2/latihan2_8.html
@@ -14,6 +14,8 @@
  
        Teks dengan format color=red; size=-1; face=impact
    </font>
+
+   <a href="../nomer 8/latihan8_1.html 8">back to home</a>
 </body>
  
 </html>
