--- a/nomer 4/latihan4_2.html
+++ b/nomer 4/latihan4_2.html
@@ -24,6 +24,7 @@
            <td align="right" > Rahmat</td>
        </tr>
    </table>
+   <a href="../nomer 8/latihan8_1.html 8">back to home</a>
 </body>
  
 </html>
