--- a/nomer 6/latihan6_2.html
+++ b/nomer 6/latihan6_2.html
@@ -73,6 +73,8 @@
        Ini adalah teks bagian keenam dalam dokumen ini.</p>
  
    <a href="#pertama">kebagian pertama</a>
+
+   <a href="../nomer 8/latihan8_1.html 8">back to home</a>
  
 </body>
  
