mengubah teks dan warna

--- a/nomer 8/latihan8_1.html
+++ b/nomer 8/latihan8_1.html
@@ -4,7 +4,7 @@
    <title>HOME (Latihan8.1)</title>
 </head>
  
-<body <body text="lemonchiffon" bgcolor="tan"> 
+<body <body text="black" bgcolor="white"> 
    >
     <h3 style="text-align:left">Latihan 1</h3>
     <ol start="1" type="a"></ol>
