--- a/nomer 2/latihan2_3.html
+++ b/nomer 2/latihan2_3.html
@@ -10,7 +10,7 @@
    <p align="right">Paragraf ini pada posisi rata kanan</p>
    <p align="left">Paragraf ini pada posisi rata kiri</p>
 
-   <a href="../nomer 8/latihan8_1.html 8">back to home</a>
+   <a href="../nomer 8/latihan8_1.html">back to home</a>
 </body>
  
 </html>
