--- a/nomer 2/latihan2_6.html
+++ b/nomer 2/latihan2_6.html
@@ -12,7 +12,7 @@ pada web browser
 seperti apa adanya, alias yang ditulis
 </pre>
 
-<a href="../nomer 8/latihan8_1.html 8">back to home</a>
+<a href="../nomer 8/latihan8_1.html">back to home</a>
 </body>
  
 </html>
