--- a/nomer 2/latihan2_7.html
+++ b/nomer 2/latihan2_7.html
@@ -11,7 +11,7 @@
  
    </center>
 
-   <a href="../nomer 8/latihan8_1.html 8">back to home</a>
+   <a href="../nomer 8/latihan8_1.html">back to home</a>
  
 </body>
  
