--- a/nomer 2/latihan2_9.html
+++ b/nomer 2/latihan2_9.html
@@ -13,7 +13,7 @@
    <hr align="center" size="5" width="20%">
    <hr align="center" size="5" width="10%">
 
-   <a href="../nomer 8/latihan8_1.html 8">back to home</a>
+   <a href="../nomer 8/latihan8_1.html">back to home</a>
 </body>
  
 </html>
