--- a/nomer 5/latihan5_3.html
+++ b/nomer 5/latihan5_3.html
@@ -12,7 +12,7 @@
        Biro Perencanaan dan Kerja Sama Luar Negeri dan Provider dan anggota Teknisi Jardiknas akan lebih cepat terjalin,
        informasi dapat dengan cepat sampai dan tepat sasaran pula. Salam Pendidikan...! Dr. Ir. Gatot Hari Priowirjanto
      
-       <a href="../nomer 8/latihan8_1.html 8">back to home</a>
+       <a href="../nomer 8/latihan8_1.html">back to home</a>
     </body>
      
     </html>
