--- a/nomer 6/latihan6_1.html
+++ b/nomer 6/latihan6_1.html
@@ -18,7 +18,7 @@
        <li><a href="http://www.google.com" target = "_top" > visit google</a></li>
    </ol>
 
-   <a href="../nomer 8/latihan8_1.html 8">back to home</a>
+   <a href="../nomer 8/latihan8_1.html">back to home</a>
 </body>
  
 </html>
