--- a/nomer 1/latihan1_2.html
+++ b/nomer 1/latihan1_2.html
@@ -7,7 +7,7 @@
 <body text="white">
     Belajar jadi pro player
 
-    <a href="../nomer 8/latihan8_1.html 8">back to home</a>
+    <a href="../nomer 8/latihan8_1.html">back to home</a>
 </body>
  
 </html>
