--- a/nomer 1/latihan1_3.html
+++ b/nomer 1/latihan1_3.html
@@ -7,7 +7,7 @@
 <body text="red" bgcolor="silver">
    Belajar bahasa pemrograman web ternyata mudah juga :)
 
-   <a href="../nomer 8/latihan8_1.html 8">back to home</a>
+   <a href="../nomer 8/latihan8_1.html">back to home</a>
 </body>
  
 </html>
