--- a/nomer 2/latihan2_2.html
+++ b/nomer 2/latihan2_2.html
@@ -10,7 +10,7 @@
    <p>Tampilan teks paragraf kedua.<br>
    Tampilan teks setelah paragraf.
 
-   <a href="../nomer 8/latihan8_1.html 8">back to home</a>
+   <a href="../nomer 8/latihan8_1.html">back to home</a>
 </body>
  
 </html>
