--- a/nomer 3/latihan3_1.html
+++ b/nomer 3/latihan3_1.html
@@ -16,7 +16,7 @@
        <li>Sistem Operasi</li>
    </ol>
 
-   <a href="../nomer 8/latihan8_1.html 8">back to home</a>
+   <a href="../nomer 8/latihan8_1.html">back to home</a>
 </body>
  
 </html>
