--- a/nomer 3/latihan3_2.html
+++ b/nomer 3/latihan3_2.html
@@ -19,7 +19,7 @@
  
    </ol>
 
-   <a href="../nomer 8/latihan8_1.html 8">back to home</a>
+   <a href="../nomer 8/latihan8_1.html">back to home</a>
 </body>
  
 </html>
