--- a/nomer 4/latihan4_1.html
+++ b/nomer 4/latihan4_1.html
@@ -26,7 +26,7 @@
  
    </table>
 
-   <a href="../nomer 8/latihan8_1.html 8">back to home</a>
+   <a href="../nomer 8/latihan8_1.html">back to home</a>
 </body>
  
 </html>
