--- a/nomer 5/latihan5_2.html
+++ b/nomer 5/latihan5_2.html
@@ -7,7 +7,7 @@
 <body>
    <img width="160" height="160" src="./gambar/image.png">
 
-   <a href="../nomer 8/latihan8_1.html 8">back to home</a>
+   <a href="../nomer 8/latihan8_1.html">back to home</a>
 </body>
  
 </html>
