--- a/nomer 6/latihan6_2.html
+++ b/nomer 6/latihan6_2.html
@@ -74,7 +74,7 @@
  
    <a href="#pertama">kebagian pertama</a>
 
-   <a href="../nomer 8/latihan8_1.html 8">back to home</a>
+   <a href="../nomer 8/latihan8_1.html">back to home</a>
  
 </body>
  
