--- a/nomer 7/latihan7_3.html
+++ b/nomer 7/latihan7_3.html
@@ -40,7 +40,7 @@
        <INPUT TYPE="submit" NAME="var4" VALUE="Send"> <INPUT TYPE="reset" NAME="var5" VALUE="Clear">
    </FORM>
 
-   <a href="../nomer 8/latihan8_1.html 8">back to home</a>
+   <a href="../nomer 8/latihan8_1.html">back to home</a>
  
 </body>
  
